--- a/proj3.ipynb
+++ b/proj3.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -618,8 +618,8 @@
     }
    ],
    "source": [
-    "df_merged = pd.merge(retail, units, on=['Brand', 'Months'], how='left')\n",
-    "df_merged.info()"
+    "retailXunits = pd.merge(retail, units, on=['Brand', 'Months'], how='left')\n",
+    "retailXunits.info()"
    ]
   },
   {
@@ -791,10 +791,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 25279 entries, 0 to 25278\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Months                    25279 non-null  object \n",
+      " 1   Brand                     25279 non-null  object \n",
+      " 2   Total Sales ($)           25279 non-null  object \n",
+      " 3   Total Units               25279 non-null  object \n",
+      " 4   vs. Prior Period (Units)  22961 non-null  float64\n",
+      "dtypes: float64(1), object(4)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "unitsXsales.info()"
+   ]
   },
   {
    "cell_type": "code",
