--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.linear_model import Lasso, LinearRegression, LogisticRegression\n",
-    "from sklearn.metrics import confusion_matrix, mean_absolute_error\n",
+    "from sklearn.metrics import confusion_matrix, mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV, KFold\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -1644,7 +1644,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/1639\r"
+      "2/1639\r"
      ]
     },
     {
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "0ee586c1-96e5-4746-93bf-81dd1f15f627",
    "metadata": {},
    "outputs": [
@@ -2360,7 +2360,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "502dc0dc-7366-4b2e-9272-b30136912865",
    "metadata": {},
    "outputs": [],
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "99c23464-f0e3-4f5f-a510-022d2d006c4d",
    "metadata": {},
    "outputs": [
@@ -2422,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "1ac7d7a9-8792-4296-814e-8f7deef2fb2e",
    "metadata": {},
    "outputs": [],
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "42893bc7-5a4e-4b5c-9887-12692e2048b9",
    "metadata": {},
    "outputs": [
@@ -2442,7 +2442,7 @@
        "1627"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "6d648d1f-653a-4a16-a298-8477acd0d662",
    "metadata": {},
    "outputs": [
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "cb84195b-e996-4d71-bf07-adb8c599469c",
    "metadata": {},
    "outputs": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "838a9b9f-a18d-4e11-9e5f-633fbc5cba25",
    "metadata": {},
    "outputs": [
@@ -2583,7 +2583,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "8e6a1cbf-8403-447c-a0a6-e03e5e6e1647",
    "metadata": {},
    "outputs": [
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "id": "1b48ab5e-a9cf-4f58-912c-c487465ea3f8",
    "metadata": {},
    "outputs": [
@@ -2658,7 +2658,17 @@
     }
    ],
    "source": [
-    "numericalFeatures = ['Previous Month Units', 'Delta Month Units', 'Units Rolling Average', 'Sales Previous Month','Delta Sales Month','Sales Rolling Average','Carries Inhaleables','Carries Topicals','Carries Ingestibles','Number Products','Total Sales ($)']\n",
+    "numericalFeatures = ['Previous Month Units', \n",
+    "                     'Delta Month Units', \n",
+    "                     'Units Rolling Average', \n",
+    "                     'Sales Previous Month',\n",
+    "                     'Delta Sales Month',\n",
+    "                     'Sales Rolling Average',\n",
+    "                     'Carries Inhaleables',\n",
+    "                     'Carries Topicals',\n",
+    "                     'Carries Ingestibles',\n",
+    "                     'Number Products',\n",
+    "                     'Total Sales ($)']\n",
     "correlationMatrix = featureEngineeredDf[numericalFeatures].corr()\n",
     "plt.figure(figsize=(10,10))\n",
     "ax = sns.heatmap(correlationMatrix, center=0, annot=True, fmt='.3f')"
@@ -2667,8 +2677,156 @@
   {
    "cell_type": "markdown",
    "id": "ff59c094-38b6-45d7-a8b3-7f70a572e08a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4b7c99b7-7628-4d45-b23c-0b6af4abf62c",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1023/1023\r"
+     ]
+    }
+   ],
+   "source": [
+    "numericalFeatures = ['Previous Month Units', \n",
+    "                     'Delta Month Units', \n",
+    "                     'Units Rolling Average', \n",
+    "                     'Sales Previous Month',\n",
+    "                     'Delta Sales Month',\n",
+    "                     'Sales Rolling Average',\n",
+    "                     'Carries Inhaleables',\n",
+    "                     'Carries Topicals',\n",
+    "                     'Carries Ingestibles',\n",
+    "                     'Number Products']\n",
+    "categoricalFeatures = ['Month']\n",
+    "\n",
+    "allPermutationsOfFeatures = sum([list(map(list,combinations(numericalFeatures, i))) for i in range(len(numericalFeatures)+1)], [])\n",
+    "l = len(allPermutationsOfFeatures)\n",
+    "bestFeatures = []\n",
+    "bestTrainMse = float('inf')\n",
+    "bestTestMse = float('inf')\n",
+    "for i,features in enumerate(allPermutationsOfFeatures):\n",
+    "    print(f'{i}/{l-1}',end='\\r')\n",
+    "    # if it is less than 3 features just skip\n",
+    "    if len(features) <= 3:\n",
+    "        continue\n",
+    "    \n",
+    "    featuresToDrop = list(set(list(featureEngineeredDf.columns)) - set(features) - set(categoricalFeatures))\n",
+    "    tempDf = featureEngineeredDf.drop(featuresToDrop, axis=1).copy(deep=True)\n",
+    "    \n",
+    "    # data pipeline for numerical data\n",
+    "    num_pipeline = Pipeline([\n",
+    "        ('std_scaler', StandardScaler()),\n",
+    "    ])\n",
+    "    \n",
+    "    # full data pipeline\n",
+    "    full_pipeline = ColumnTransformer([\n",
+    "        ('num', num_pipeline, features),\n",
+    "        ('cat', OneHotEncoder(), categoricalFeatures),\n",
+    "    ])\n",
+    "    \n",
+    "    preparedData = full_pipeline.fit_transform(tempDf)\n",
+    "    \n",
+    "    # train test split\n",
+    "    labels = featureEngineeredDf['Total Sales ($)'].copy()\n",
+    "    train_set, test_set, train_label, test_label = train_test_split(preparedData, labels, test_size=0.3, random_state=42)\n",
+    "    \n",
+    "    # perform linear regression\n",
+    "    linearRegression = LinearRegression()\n",
+    "    linearRegression.fit(train_set,train_label)\n",
+    "    trainPrediction = linearRegression.predict(train_set)\n",
+    "    testPrediction = linearRegression.predict(test_set)\n",
+    "    \n",
+    "    # get mean squared error\n",
+    "    trainMse = mean_squared_error(train_label, trainPrediction)\n",
+    "    testMse = mean_squared_error(test_label, testPrediction)\n",
+    "    \n",
+    "    # append to list of best features\n",
+    "    if testMse < bestTestMse:\n",
+    "        bestFeatures = features\n",
+    "        bestTrainMse = trainMse\n",
+    "        bestTestMse = testMse\n",
+    "    elif testMse == bestTestMse:\n",
+    "        bestFeatures.append(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2c0b1b0d-bc70-4fde-a1dd-1c3f511694e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best features ['Delta Month Units', 'Sales Previous Month', 'Sales Rolling Average', 'Carries Inhaleables', 'Carries Ingestibles']\n",
+      "best train Rmse 242794.64859357572\n",
+      "best test Rmse 298321.11231034447\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "print('best features', bestFeatures)\n",
+    "print('best train Rmse', sqrt(bestTrainMse))\n",
+    "print('best test Rmse', sqrt(bestTestMse))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeed29c7-f796-4db1-add8-602e27a9a176",
+   "metadata": {},
+   "source": [
+    "# feature cross"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f9477c-78a9-4ae6-8c49-08d97a0ea726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# feature cross\n",
+    "featureEngineeredDf['Units Average Per Product'] = featureEngineeredDf['Units Rolling Average'] * featureEngineeredDf['Product Count']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973742e7-002c-4b89-b17a-3ebf3486b4cd",
+   "metadata": {},
+   "source": [
+    "# Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5351edc-c871-4d57-b8bf-dc31cad75aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numericalFeatures = ['Delta Month Units',\n",
+    "                     'Sales Previous Month',\n",
+    "                     'Sales Rolling Average',\n",
+    "                     'Carries Inhaleables',\n",
+    "                     'Carries Ingestibles']\n",
+    "augmentedFeature = ['Units Average Per Product']\n",
+    "categoricalFeatures = ['Month']\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
