--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import sqrt\n",
     "from itertools import combinations\n",
     "from sklearn import metrics\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
@@ -2778,7 +2779,6 @@
     }
    ],
    "source": [
-    "from math import sqrt\n",
     "print('best features', bestFeatures)\n",
     "print('best train Rmse', sqrt(bestTrainMse))\n",
     "print('best test Rmse', sqrt(bestTestMse))"
@@ -2813,10 +2813,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "id": "d2a9c999-b2fc-4c0a-9b56-f58023be4e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 20549 entries, 0 to 26\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Month                  20549 non-null  object \n",
+      " 1   Previous Month Units   20549 non-null  float64\n",
+      " 2   Delta Month Units      20549 non-null  float64\n",
+      " 3   Units Rolling Average  20549 non-null  float64\n",
+      " 4   Brand                  20549 non-null  object \n",
+      " 5   Total Sales ($)        20549 non-null  float64\n",
+      " 6   Sales Previous Month   20549 non-null  float64\n",
+      " 7   Delta Sales Month      20549 non-null  float64\n",
+      " 8   Sales Rolling Average  20549 non-null  float64\n",
+      " 9   Carries Inhaleables    20549 non-null  int64  \n",
+      " 10  Carries Topicals       20549 non-null  int64  \n",
+      " 11  Carries Ingestibles    20549 non-null  int64  \n",
+      " 12  Number Products        20549 non-null  int64  \n",
+      "dtypes: float64(7), int64(4), object(2)\n",
+      "memory usage: 2.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "featureEngineeredDf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "f5351edc-c871-4d57-b8bf-dc31cad75aa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train Rmse Linear Regression 242794.64859357572\n",
+      "test Rmse Linear Regression 298321.11231034447\n",
+      "test r^2 0.9726778732765677\n",
+      "test variance 0.9726789176934861\n"
+     ]
+    }
+   ],
    "source": [
     "numericalFeatures = ['Delta Month Units',\n",
     "                     'Sales Previous Month',\n",
@@ -2825,8 +2873,69 @@
     "                     'Carries Ingestibles']\n",
     "augmentedFeature = ['Units Average Per Product']\n",
     "categoricalFeatures = ['Month']\n",
-    "\n"
+    "\n",
+    "# drop features\n",
+    "featuresToDrop = list(set(featureEngineeredDf.columns) - set(augmentedFeature) - set(categoricalFeatures) - set(numericalFeatures))\n",
+    "tempDf = featureEngineeredDf.drop(featuresToDrop, axis=1).copy(deep=True)\n",
+    "\n",
+    "# pipeline\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "    ('num', num_pipeline, numericalFeatures),\n",
+    "    ('cat', OneHotEncoder(), categoricalFeatures),\n",
+    "])\n",
+    "\n",
+    "preparedData = full_pipeline.fit_transform(tempDf)\n",
+    "\n",
+    "# train test split\n",
+    "labels = featureEngineeredDf['Total Sales ($)'].copy()\n",
+    "train_set, test_set, train_label, test_label = train_test_split(preparedData,labels, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# linear regresssion\n",
+    "linearRegression = LinearRegression()\n",
+    "linearRegression.fit(train_set, train_label)\n",
+    "\n",
+    "trainPrediction = linearRegression.predict(train_set)\n",
+    "testPrediction = linearRegression.predict(test_set)\n",
+    "\n",
+    "# get mean squared error\n",
+    "trainMse = mean_squared_error(train_label, trainPrediction)\n",
+    "testMse = mean_squared_error(test_label, testPrediction)\n",
+    "\n",
+    "print('train Rmse Linear Regression', sqrt(trainMse))\n",
+    "print('test Rmse Linear Regression', sqrt(testMse))\n",
+    "print('test r^2', metrics.r2_score(test_label, testPrediction))\n",
+    "print('test variance',metrics.explained_variance_score(test_label, testPrediction))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe1e9c15-bb9f-4fe8-b758-fe76a3a3ef4a",
+   "metadata": {},
+   "source": [
+    "# linear regression with cross validation and grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c55cb64b-24bd-447c-a985-61b7bc16e36b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = np.array(labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ce8be3-d119-4835-9af3-732351d35d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
