pca with cross validation through grid search'

--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,7 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -2921,18 +2922,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "id": "c55cb64b-24bd-447c-a985-61b7bc16e36b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = np.array(labels)\n"
+    "labels = np.array(labels)\n",
+    "fit_intercept = ['True', 'False']\n",
+    "positive = ['True', 'False']\n",
+    "\n",
+    "parameter_grid = dict (\n",
+    "    fit_intercept = fit_intercept,\n",
+    "    positive = positive\n",
+    ")\n",
+    "linearRegression = LinearRegression()\n",
+    "\n",
+    "gridSearchCV = GridSearchCV(estimator=linearRegression,\n",
+    "                           param_grid=parameter_grid,\n",
+    "                           scoring='neg_mean_absolute_error',\n",
+    "                           cv=10)\n",
+    "\n",
+    "gridResult = gridSearchCV.fit(preparedData, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "86a1af88-4042-4974-bf00-42fe56aa939c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae score -87737.11689503728\n",
+      "best hyperparameters {'fit_intercept': 'True', 'positive': 'True'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('best negative mae score', gridResult.best_score_)\n",
+    "print('best hyperparameters', gridResult.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b1d0595-72a7-4a2a-a300-e5ed5ae1c460",
+   "metadata": {},
+   "source": [
+    "# PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8e452a72-77b1-4dc6-8197-3c3a217a6b11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "components = ['a','b','c','d']\n",
+    "pca = PCA(n_components=len(components))\n",
+    "principleComponents = pca.fit_transform(preparedData)\n",
+    "pcaDf = pd.DataFrame(data=principleComponents,columns=components)\n",
+    "\n",
+    "# train test split\n",
+    "labels = featureEngineeredDf['Total Sales ($)'].copy()\n",
+    "train_set, test_set, train_label, test_label = train_test_split(principleComponents, labels, test_size=0.3, random_state=42)\n",
+    "\n",
+    "#linear regression\n",
+    "linearRegression.fit(train_set, train_label)\n",
+    "\n",
+    "trainPrediction = linearRegression.predict(train_set)\n",
+    "testPrediction = linearRegression.predict(test_set)\n",
+    "\n",
+    "trainMse = mean_squared_error(train_label,trainPrediction)\n",
+    "testMse = mean_squared_error(test_label, testPrediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "df38dec8-7ff9-4daa-88cd-79b0e2e78e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train rmse 265053.6817623548\n",
+      "test rmse 319822.2039274057\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train rmse', sqrt(trainMse))\n",
+    "print('test rmse', sqrt(testMse))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d5f486-2df8-40c6-a316-b4e2009ea62b",
+   "metadata": {},
+   "source": [
+    "# pca with cross validation through grid search"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ce8be3-d119-4835-9af3-732351d35d2b",
+   "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
    "metadata": {},
    "outputs": [],
    "source": []
