starting random forrest

--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 80,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -2961,7 +2962,7 @@
     }
    ],
    "source": [
-    "print('best negative mae score', gridResult.best_score_)\n",
+    "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
    ]
   },
@@ -3029,8 +3030,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "id": "2317b6fd-1fdf-4011-ad8a-71d202815c2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 20549 entries, 0 to 26\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Month                  20549 non-null  object \n",
+      " 1   Previous Month Units   20549 non-null  float64\n",
+      " 2   Delta Month Units      20549 non-null  float64\n",
+      " 3   Units Rolling Average  20549 non-null  float64\n",
+      " 4   Brand                  20549 non-null  object \n",
+      " 5   Total Sales ($)        20549 non-null  float64\n",
+      " 6   Sales Previous Month   20549 non-null  float64\n",
+      " 7   Delta Sales Month      20549 non-null  float64\n",
+      " 8   Sales Rolling Average  20549 non-null  float64\n",
+      " 9   Carries Inhaleables    20549 non-null  int64  \n",
+      " 10  Carries Topicals       20549 non-null  int64  \n",
+      " 11  Carries Ingestibles    20549 non-null  int64  \n",
+      " 12  Number Products        20549 non-null  int64  \n",
+      "dtypes: float64(7), int64(4), object(2)\n",
+      "memory usage: 2.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "featureEngineeredDf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA()\n",
+    "\n",
+    "linearRegression = LinearRegression()\n",
+    "pipeline = Pipeline(\n",
+    "    steps=[('pca',pca),('lin_reg',linearRegression)]\n",
+    ")\n",
+    "param_grid = {\n",
+    "    'pca__n_components': [2,3,4,5,6,7,8], # confused about this\n",
+    "    'lin_reg__fit_intercept': ['True','False'],\n",
+    "    'lin_reg__positive': ['True','False']\n",
+    "}\n",
+    "\n",
+    "gridSearchCV = GridSearchCV(\n",
+    "    estimator=pipeline,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='neg_mean_absolute_error',\n",
+    "    cv=10\n",
+    ")\n",
+    "gridResult = gridSearchCV.fit(preparedData, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ee412e43-ea80-49db-be6d-6218af13083e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best neg mae -90316.57601300233\n",
+      "best hyper params {'lin_reg__fit_intercept': 'False', 'lin_reg__positive': 'False', 'pca__n_components': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('best neg mae', gridResult.best_score_)\n",
+    "print('best hyper params', gridResult.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b880a70-6b34-451c-b6f1-88f7f3a5f9a5",
+   "metadata": {},
+   "source": [
+    "# random forrest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50790e0-fcdf-4847-bc68-f46fe0877759",
    "metadata": {},
    "outputs": [],
    "source": []
