doing random forrest with grid search

--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -3123,8 +3123,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "c50790e0-fcdf-4847-bc68-f46fe0877759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = featureEngineeredDf['Total Sales ($)'].copy()\n",
+    "train_set,test_set,train_label,test_label = train_test_split(preparedData,labels,test_size=0.3,random_state=42)\n",
+    "\n",
+    "randomForrest = RandomForestRegressor(max_depth=8, random_state=42)\n",
+    "randomForrest.fit(train_set,train_label)\n",
+    "\n",
+    "trainPrediction = randomForrest.predict(train_set)\n",
+    "testPrediction = randomForrest.predict(test_set)\n",
+    "\n",
+    "trainMse = mean_squared_error(train_label,trainPrediction)\n",
+    "testMse = mean_squared_error(test_label,testPrediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "b45a3166-10eb-44fc-b064-f8fbf7812c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train rmse 152768.08619432512\n",
+      "test rmse 334471.98953774356\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train rmse', sqrt(trainMse))\n",
+    "print('test rmse',sqrt(testMse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aff5e16-a012-4fe1-afe5-dee230288492",
    "metadata": {},
    "outputs": [],
    "source": []
