--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.svm import SVR\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -3030,43 +3032,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "2317b6fd-1fdf-4011-ad8a-71d202815c2e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20549 entries, 0 to 26\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   Month                  20549 non-null  object \n",
-      " 1   Previous Month Units   20549 non-null  float64\n",
-      " 2   Delta Month Units      20549 non-null  float64\n",
-      " 3   Units Rolling Average  20549 non-null  float64\n",
-      " 4   Brand                  20549 non-null  object \n",
-      " 5   Total Sales ($)        20549 non-null  float64\n",
-      " 6   Sales Previous Month   20549 non-null  float64\n",
-      " 7   Delta Sales Month      20549 non-null  float64\n",
-      " 8   Sales Rolling Average  20549 non-null  float64\n",
-      " 9   Carries Inhaleables    20549 non-null  int64  \n",
-      " 10  Carries Topicals       20549 non-null  int64  \n",
-      " 11  Carries Ingestibles    20549 non-null  int64  \n",
-      " 12  Number Products        20549 non-null  int64  \n",
-      "dtypes: float64(7), int64(4), object(2)\n",
-      "memory usage: 2.2+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "featureEngineeredDf.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 77,
    "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
    "metadata": {},
@@ -3162,9 +3127,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3db37b0c-3261-409f-b963-26f988c36862",
+   "metadata": {},
+   "source": [
+    "# random forrest with grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "dadcded7-c3b8-4f14-b274-3825143502aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_depth=[8]\n",
+    "n_estimators = [50,100,150]\n",
+    "n_jobs = [-1]\n",
+    "param_grid = dict(\n",
+    "    max_depth=max_depth,\n",
+    "    n_estimators=n_estimators,\n",
+    "    n_jobs=n_jobs\n",
+    ")\n",
+    "\n",
+    "randomForrest = RandomForestRegressor()\n",
+    "gridSearchCV = GridSearchCV(\n",
+    "    estimator=randomForrest,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='neg_mean_absolute_error',\n",
+    "    cv=10\n",
+    ")\n",
+    "\n",
+    "gridResult = gridSearchCV.fit(preparedData,labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "9b71c257-a448-46e4-b2e2-e2986d3efb4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae -102283.07199830298\n",
+      "best hyperparameters {'max_depth': 8, 'n_estimators': 50, 'n_jobs': -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('best negative mae', gridResult.best_score_)\n",
+    "print('best hyperparameters', gridResult.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede27a79-85e6-43c6-839b-1cc2796cf0f6",
+   "metadata": {},
+   "source": [
+    "# cross validate svm using grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "108c167f-b0c4-4889-b57b-19295a578f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel = ['linear', 'poly']\n",
+    "param_grid = dict (\n",
+    "    kernel=kernel\n",
+    ")\n",
+    "\n",
+    "svr = SVR()\n",
+    "gridSearch = GridSearchCV(\n",
+    "    estimator=svr,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='neg_mean_absolute_error',\n",
+    "    cv=10,\n",
+    "    n_jobs=-1)\n",
+    "\n",
+    "gridResult = gridSearch.fit(preparedData,labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "a67517be-5c70-48f1-acec-74f3a20ee052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae -412120.8287665685\n",
+      "best hyperparameters {'kernel': 'poly'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('best negative mae', gridResult.best_score_)\n",
+    "print('best hyperparameters', gridResult.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf5e72d-6730-4880-931d-450551697ad8",
+   "metadata": {},
+   "source": [
+    "# cross validation bagging using grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "201bf56e-a5df-4ce0-bb42-04284832d897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_estimators = [10,15,20]\n",
+    "max_features = [1,2,3]\n",
+    "\n",
+    "param_grid = dict(\n",
+    "    n_estimators=n_estimators,\n",
+    "    max_features=max_features\n",
+    ")\n",
+    "\n",
+    "bagging = BaggingRegressor()\n",
+    "gridSearch = GridSearchCV(\n",
+    "    estimator=bagging,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='neg_mean_absolute_error',\n",
+    "    cv=10,\n",
+    "    n_jobs=-1)\n",
+    "\n",
+    "gridResult = gridSearch.fit(preparedData,labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "15db7edb-a26b-4af6-a360-73a8e077a06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae -399973.4964951496\n",
+      "best hyperparameters {'max_features': 3, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('best negative mae', gridResult.best_score_)\n",
+    "print('best hyperparameters', gridResult.best_params_)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aff5e16-a012-4fe1-afe5-dee230288492",
+   "id": "fb5a39a5-9e08-4de8-a1fb-0c2b1dfd2d95",
    "metadata": {},
    "outputs": [],
    "source": []
