--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "631baeda-0da5-42f2-99b9-9ca6b1f21b01",
    "metadata": {},
    "outputs": [],
@@ -1649,7 +1649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/1639\r"
+      "3/1639\r"
      ]
     },
     {
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "2c0b1b0d-bc70-4fde-a1dd-1c3f511694e8",
    "metadata": {},
    "outputs": [
@@ -2798,13 +2798,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "88f9477c-78a9-4ae6-8c49-08d97a0ea726",
    "metadata": {},
    "outputs": [],
    "source": [
     "# feature cross\n",
-    "featureEngineeredDf['Units Average Per Product'] = featureEngineeredDf['Units Rolling Average'] * featureEngineeredDf['Product Count']"
+    "featureEngineeredDf['Units Average Per Product'] = featureEngineeredDf['Units Rolling Average'] * featureEngineeredDf['Number Products']"
    ]
   },
   {
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "d2a9c999-b2fc-4c0a-9b56-f58023be4e32",
    "metadata": {},
    "outputs": [
@@ -2827,24 +2827,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 20549 entries, 0 to 26\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   Month                  20549 non-null  object \n",
-      " 1   Previous Month Units   20549 non-null  float64\n",
-      " 2   Delta Month Units      20549 non-null  float64\n",
-      " 3   Units Rolling Average  20549 non-null  float64\n",
-      " 4   Brand                  20549 non-null  object \n",
-      " 5   Total Sales ($)        20549 non-null  float64\n",
-      " 6   Sales Previous Month   20549 non-null  float64\n",
-      " 7   Delta Sales Month      20549 non-null  float64\n",
-      " 8   Sales Rolling Average  20549 non-null  float64\n",
-      " 9   Carries Inhaleables    20549 non-null  int64  \n",
-      " 10  Carries Topicals       20549 non-null  int64  \n",
-      " 11  Carries Ingestibles    20549 non-null  int64  \n",
-      " 12  Number Products        20549 non-null  int64  \n",
-      "dtypes: float64(7), int64(4), object(2)\n",
-      "memory usage: 2.2+ MB\n"
+      "Data columns (total 14 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   Month                      20549 non-null  object \n",
+      " 1   Previous Month Units       20549 non-null  float64\n",
+      " 2   Delta Month Units          20549 non-null  float64\n",
+      " 3   Units Rolling Average      20549 non-null  float64\n",
+      " 4   Brand                      20549 non-null  object \n",
+      " 5   Total Sales ($)            20549 non-null  float64\n",
+      " 6   Sales Previous Month       20549 non-null  float64\n",
+      " 7   Delta Sales Month          20549 non-null  float64\n",
+      " 8   Sales Rolling Average      20549 non-null  float64\n",
+      " 9   Carries Inhaleables        20549 non-null  int64  \n",
+      " 10  Carries Topicals           20549 non-null  int64  \n",
+      " 11  Carries Ingestibles        20549 non-null  int64  \n",
+      " 12  Number Products            20549 non-null  int64  \n",
+      " 13  Units Average Per Product  20549 non-null  float64\n",
+      "dtypes: float64(8), int64(4), object(2)\n",
+      "memory usage: 2.4+ MB\n"
      ]
     }
    ],
@@ -2854,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "id": "f5351edc-c871-4d57-b8bf-dc31cad75aa7",
    "metadata": {},
    "outputs": [
@@ -2925,7 +2926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "c55cb64b-24bd-447c-a985-61b7bc16e36b",
    "metadata": {},
    "outputs": [],
@@ -2950,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "86a1af88-4042-4974-bf00-42fe56aa939c",
    "metadata": {},
    "outputs": [
@@ -2958,7 +2959,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae score -87737.11689503728\n",
+      "best negative mae -87737.11689503728\n",
       "best hyperparameters {'fit_intercept': 'True', 'positive': 'True'}\n"
      ]
     }
@@ -2978,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "id": "8e452a72-77b1-4dc6-8197-3c3a217a6b11",
    "metadata": {},
    "outputs": [],
@@ -3004,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 50,
    "id": "df38dec8-7ff9-4daa-88cd-79b0e2e78e28",
    "metadata": {},
    "outputs": [
@@ -3012,8 +3013,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train rmse 265053.6817623548\n",
-      "test rmse 319822.2039274057\n"
+      "train rmse 265053.8805764341\n",
+      "test rmse 319822.3301856539\n"
      ]
     }
    ],
@@ -3032,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 51,
    "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
    "metadata": {},
    "outputs": [],
@@ -3060,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "id": "ee412e43-ea80-49db-be6d-6218af13083e",
    "metadata": {},
    "outputs": [
@@ -3068,8 +3069,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best neg mae -90316.57601300233\n",
-      "best hyper params {'lin_reg__fit_intercept': 'False', 'lin_reg__positive': 'False', 'pca__n_components': 5}\n"
+      "best neg mae -90316.57259773942\n",
+      "best hyper params {'lin_reg__fit_intercept': 'True', 'lin_reg__positive': 'True', 'pca__n_components': 4}\n"
      ]
     }
    ],
@@ -3088,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "id": "c50790e0-fcdf-4847-bc68-f46fe0877759",
    "metadata": {},
    "outputs": [],
@@ -3108,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 54,
    "id": "b45a3166-10eb-44fc-b064-f8fbf7812c6a",
    "metadata": {},
    "outputs": [
@@ -3136,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 55,
    "id": "dadcded7-c3b8-4f14-b274-3825143502aa",
    "metadata": {},
    "outputs": [],
@@ -3163,7 +3164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 56,
    "id": "9b71c257-a448-46e4-b2e2-e2986d3efb4f",
    "metadata": {},
    "outputs": [
@@ -3171,8 +3172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -102283.07199830298\n",
-      "best hyperparameters {'max_depth': 8, 'n_estimators': 50, 'n_jobs': -1}\n"
+      "best negative mae -102351.25227574148\n",
+      "best hyperparameters {'max_depth': 8, 'n_estimators': 100, 'n_jobs': -1}\n"
      ]
     }
    ],
@@ -3191,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 57,
    "id": "108c167f-b0c4-4889-b57b-19295a578f6b",
    "metadata": {},
    "outputs": [],
@@ -3214,7 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 58,
    "id": "a67517be-5c70-48f1-acec-74f3a20ee052",
    "metadata": {},
    "outputs": [
@@ -3242,7 +3243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 59,
    "id": "201bf56e-a5df-4ce0-bb42-04284832d897",
    "metadata": {},
    "outputs": [],
@@ -3268,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 60,
    "id": "15db7edb-a26b-4af6-a360-73a8e077a06f",
    "metadata": {},
    "outputs": [
@@ -3276,7 +3277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -399973.4964951496\n",
+      "best negative mae -392295.84824361035\n",
       "best hyperparameters {'max_features': 3, 'n_estimators': 10}\n"
      ]
     }
@@ -3285,14 +3286,6 @@
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb5a39a5-9e08-4de8-a1fb-0c2b1dfd2d95",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
