--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt\n",
     "from itertools import combinations\n",
     "from sklearn import metrics\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
@@ -24,7 +23,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.linear_model import Lasso, LinearRegression, LogisticRegression\n",
-    "from sklearn.metrics import confusion_matrix, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.metrics import confusion_matrix, mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV, KFold\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -2297,7 +2296,6 @@
     }
    ],
    "source": [
-    "# rename the brands column to brand\n",
     "featureEngineeredDf.head(20)"
    ]
   },
@@ -2719,8 +2717,8 @@
     "allPermutationsOfFeatures = sum([list(map(list,combinations(numericalFeatures, i))) for i in range(len(numericalFeatures)+1)], [])\n",
     "l = len(allPermutationsOfFeatures)\n",
     "bestFeatures = []\n",
-    "bestTrainMse = float('inf')\n",
-    "bestTestMse = float('inf')\n",
+    "bestTrainMae = float('inf')\n",
+    "bestTestMae = float('inf')\n",
     "for i,features in enumerate(allPermutationsOfFeatures):\n",
     "    print(f'{i}/{l-1}',end='\\r')\n",
     "    # if it is less than 3 features just skip\n",
@@ -2753,16 +2751,16 @@
     "    trainPrediction = linearRegression.predict(train_set)\n",
     "    testPrediction = linearRegression.predict(test_set)\n",
     "    \n",
-    "    # get mean squared error\n",
-    "    trainMse = mean_squared_error(train_label, trainPrediction)\n",
-    "    testMse = mean_squared_error(test_label, testPrediction)\n",
+    "    # get mean absolute error\n",
+    "    trainMae = mean_absolute_error(train_label, trainPrediction)\n",
+    "    testMae = mean_absolute_error(test_label, testPrediction)\n",
     "    \n",
     "    # append to list of best features\n",
-    "    if testMse < bestTestMse:\n",
+    "    if testMae < bestTestMae:\n",
     "        bestFeatures = features\n",
-    "        bestTrainMse = trainMse\n",
-    "        bestTestMse = testMse\n",
-    "    elif testMse == bestTestMse:\n",
+    "        bestTrainMae = trainMae\n",
+    "        bestTestMae = testMae\n",
+    "    elif testMae == bestTestMae:\n",
     "        bestFeatures.append(features)"
    ]
   },
@@ -2776,16 +2774,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best features ['Delta Month Units', 'Sales Previous Month', 'Sales Rolling Average', 'Carries Inhaleables', 'Carries Ingestibles']\n",
-      "best train Rmse 242794.64859357572\n",
-      "best test Rmse 298321.11231034447\n"
+      "best features ['Sales Previous Month', 'Sales Rolling Average', 'Carries Inhaleables', 'Carries Topicals']\n",
+      "best train mae 85099.48444282636\n",
+      "best test mae 93150.0571973241\n"
      ]
     }
    ],
    "source": [
     "print('best features', bestFeatures)\n",
-    "print('best train Rmse', sqrt(bestTrainMse))\n",
-    "print('best test Rmse', sqrt(bestTestMse))"
+    "print('best train mae', bestTrainMae)\n",
+    "print('best test mae', bestTestMae)"
    ]
   },
   {
@@ -2798,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "88f9477c-78a9-4ae6-8c49-08d97a0ea726",
    "metadata": {},
    "outputs": [],
@@ -2817,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "d2a9c999-b2fc-4c0a-9b56-f58023be4e32",
    "metadata": {},
    "outputs": [
@@ -2855,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "f5351edc-c871-4d57-b8bf-dc31cad75aa7",
    "metadata": {},
    "outputs": [
@@ -2863,8 +2861,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Rmse Linear Regression 242794.64859357572\n",
-      "test Rmse Linear Regression 298321.11231034447\n",
+      "train mae Linear Regression 85274.44529647274\n",
+      "test mae Linear Regression 93401.31958423468\n",
       "test r^2 0.9726778732765677\n",
       "test variance 0.9726789176934861\n"
      ]
@@ -2906,12 +2904,12 @@
     "trainPrediction = linearRegression.predict(train_set)\n",
     "testPrediction = linearRegression.predict(test_set)\n",
     "\n",
-    "# get mean squared error\n",
-    "trainMse = mean_squared_error(train_label, trainPrediction)\n",
-    "testMse = mean_squared_error(test_label, testPrediction)\n",
+    "# get mean absolute error\n",
+    "trainMae = mean_absolute_error(train_label, trainPrediction)\n",
+    "testMae = mean_absolute_error(test_label, testPrediction)\n",
     "\n",
-    "print('train Rmse Linear Regression', sqrt(trainMse))\n",
-    "print('test Rmse Linear Regression', sqrt(testMse))\n",
+    "print('train mae Linear Regression', trainMae)\n",
+    "print('test mae Linear Regression', testMae)\n",
     "print('test r^2', metrics.r2_score(test_label, testPrediction))\n",
     "print('test variance',metrics.explained_variance_score(test_label, testPrediction))"
    ]
@@ -2926,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "c55cb64b-24bd-447c-a985-61b7bc16e36b",
    "metadata": {},
    "outputs": [],
@@ -2951,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "86a1af88-4042-4974-bf00-42fe56aa939c",
    "metadata": {},
    "outputs": [
@@ -2979,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "8e452a72-77b1-4dc6-8197-3c3a217a6b11",
    "metadata": {},
    "outputs": [],
@@ -2999,13 +2997,13 @@
     "trainPrediction = linearRegression.predict(train_set)\n",
     "testPrediction = linearRegression.predict(test_set)\n",
     "\n",
-    "trainMse = mean_squared_error(train_label,trainPrediction)\n",
-    "testMse = mean_squared_error(test_label, testPrediction)"
+    "trainMae = mean_absolute_error(train_label,trainPrediction)\n",
+    "testMae = mean_absolute_error(test_label, testPrediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "df38dec8-7ff9-4daa-88cd-79b0e2e78e28",
    "metadata": {},
    "outputs": [
@@ -3013,14 +3011,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train rmse 265053.8805764341\n",
-      "test rmse 319822.3301856539\n"
+      "train mae 86955.77261718779\n",
+      "test mae 96054.31325490991\n",
+      "test r^2 0.9685975229552111\n",
+      "test variance 0.9685977635596624\n"
      ]
     }
    ],
    "source": [
-    "print('train rmse', sqrt(trainMse))\n",
-    "print('test rmse', sqrt(testMse))"
+    "print('train mae', trainMae)\n",
+    "print('test mae', testMae)\n",
+    "print('test r^2', metrics.r2_score(test_label, testPrediction))\n",
+    "print('test variance',metrics.explained_variance_score(test_label, testPrediction))"
    ]
   },
   {
@@ -3033,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
    "metadata": {},
    "outputs": [],
@@ -3061,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "ee412e43-ea80-49db-be6d-6218af13083e",
    "metadata": {},
    "outputs": [
@@ -3069,7 +3071,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best neg mae -90316.57259773942\n",
+      "best neg mae -90316.456735071\n",
       "best hyper params {'lin_reg__fit_intercept': 'True', 'lin_reg__positive': 'True', 'pca__n_components': 4}\n"
      ]
     }
@@ -3089,7 +3091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "id": "c50790e0-fcdf-4847-bc68-f46fe0877759",
    "metadata": {},
    "outputs": [],
@@ -3103,13 +3105,13 @@
     "trainPrediction = randomForrest.predict(train_set)\n",
     "testPrediction = randomForrest.predict(test_set)\n",
     "\n",
-    "trainMse = mean_squared_error(train_label,trainPrediction)\n",
-    "testMse = mean_squared_error(test_label,testPrediction)"
+    "trainMae = mean_absolute_error(train_label,trainPrediction)\n",
+    "testMae = mean_absolute_error(test_label,testPrediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "id": "b45a3166-10eb-44fc-b064-f8fbf7812c6a",
    "metadata": {},
    "outputs": [
@@ -3117,14 +3119,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train rmse 152768.08619432512\n",
-      "test rmse 334471.98953774356\n"
+      "train rmse 68495.38013224969\n",
+      "test rmse 91873.989375508\n"
      ]
     }
    ],
    "source": [
-    "print('train rmse', sqrt(trainMse))\n",
-    "print('test rmse',sqrt(testMse))"
+    "print('train rmse', trainMae)\n",
+    "print('test rmse', testMae)"
    ]
   },
   {
@@ -3137,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "dadcded7-c3b8-4f14-b274-3825143502aa",
    "metadata": {},
    "outputs": [],
@@ -3164,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "9b71c257-a448-46e4-b2e2-e2986d3efb4f",
    "metadata": {},
    "outputs": [
@@ -3172,7 +3174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -102351.25227574148\n",
+      "best negative mae -102078.31869179782\n",
       "best hyperparameters {'max_depth': 8, 'n_estimators': 100, 'n_jobs': -1}\n"
      ]
     }
@@ -3192,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "108c167f-b0c4-4889-b57b-19295a578f6b",
    "metadata": {},
    "outputs": [],
@@ -3215,7 +3217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "a67517be-5c70-48f1-acec-74f3a20ee052",
    "metadata": {},
    "outputs": [
@@ -3243,7 +3245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "id": "201bf56e-a5df-4ce0-bb42-04284832d897",
    "metadata": {},
    "outputs": [],
@@ -3269,7 +3271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "id": "15db7edb-a26b-4af6-a360-73a8e077a06f",
    "metadata": {},
    "outputs": [
@@ -3277,7 +3279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -392295.84824361035\n",
+      "best negative mae -418626.02249210526\n",
       "best hyperparameters {'max_features': 3, 'n_estimators': 10}\n"
      ]
     }
@@ -3286,6 +3288,14 @@
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5718c54b-1ded-44f9-b38a-585df7cc9839",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
